[gd_scene load_steps=3 format=3 uid="uid://name_confirm_tab"]

[ext_resource type="Script" path="res://scripts/character_creation/tabs/NameConfirmTab.gd" id="1_nameconfirmtab"]
[ext_resource type="Theme" uid="uid://dpiqolc47bhf4" path="res://themes/bg3_theme.tres" id="2_theme"]

[node name="NameConfirmTab" type="VBoxContainer"]
theme = ExtResource("2_theme")
script = ExtResource("1_nameconfirmtab")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Name & Confirm"
horizontal_alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="NameContainer"]
layout_mode = 2
text = "Character Name:"

[node name="NameLineEdit" type="LineEdit" parent="NameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter character name"

[node name="SummaryArea" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SummaryLabel" type="Label" parent="SummaryArea"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
text = "Character Summary:"
